# cstar_compiler-old-

./: .emacs  .gitignore  .gitmodules  .vimdesktop  CMakeLists.txt  DOKUMANTASYON_TR.md  README.md  build.bat  build.sh  expr_.cpp  grammar.cfg  lang-docs.md  main.cpp  precedence_table
@vscode-cstar-static-analyzer/: README.md  package.json
@vscode-cstar-static-analyzer/src/: cli.js
@vscode-cstar-syntax/: CHANGELOG.md  LICENSE  README.md  cstar-syntax-0.2.0.vsix  cstar-syntax-0.3.0.vsix  cstar-syntax-0.4.0.vsix  cstar-syntax-0.5.0.vsix  language-configuration.json  package.json
@vscode-cstar-syntax/server/: analyzer.js  server.js
@vscode-cstar-syntax/snippets/: cstar.code-snippets
@vscode-cstar-syntax/syntaxes/: cstar.tmLanguage.json
book/: all_examples.cstar  index.html
docs/: ARCHITECTURE_TR.md  BUILD_TR.md  CSTAR_STATIC_ANALYZER_TODO_TR.md  TODO_TR.md  VSCODE_CSTAR_EXTENSION_TODO_TR.md  index.html
examples/: bug0.cstar  policy.cstar  quick.cstar  stream.cstar  stress.cstar  syntax.cstar
examples/admin/: test.cstar
examples/ds/: README_TR.md  adjacency_matrix_graph.cstar  fixed_ring_queue.cstar  shared_linked_stack.cstar  span_binary_heap.cstar
examples/functions/: 000.cstar  001.cstar  002.cstar  003.cstar  004.cstar  005.cstar  006.cstar  007.cstar
examples/interactive/: ascii_donut.cstar  ascii_snake.cstar  calculator.cstar  feature_lab.cstar  hello_world.cstar  stress_decision_engine.cstar  stress_ownership_bank.cstar  stress_pointer_matrix.cstar
examples/interactive/capability_project/: README.md  main.cstar
examples/interactive/game/: README.md  main.cstar
examples/interactive/graphics/: README.md  main.cstar
examples/papers/: allocator.cstar  build.cstar  collections.cstar  concurrency.cstar  enum.cstar  metaprogramming.cstar  nullability.cstar  policy.cstar  protocol.cstar  struct.cstar  syntax.cstar  trait.cstar
examples/smoke/: array_element_shortcut_assignment.cstar  array_param_read.cstar  assignment.cstar  bool_literal.cstar  castable_param.cstar  constptr_param.cstar  constptr_pointer.cstar  constref_param.cstar  core_print_read.cstar  core_read_string.cstar  dereference_assignment_shortcut.cstar  export_block_from_module.cstar  float64_arithmetic.cstar  forward_function_call.cstar  function_call_initializer.cstar  if_condition_pointer_conversion.cstar  if_else_statement.cstar  if_fallthrough_statement.cstar  if_statement.cstar  import_block_function.cstar  import_function_abs.cstar  import_function_named_param.cstar  include_module_function.cstar  include_module_public_static.cstar  include_module_string_param.cstar  loop_array_indexed_iterable.cstar  loop_array_param_iterable.cstar  loop_break_continue_nested_if.cstar  loop_break_statement.cstar  loop_continue_statement.cstar  loop_false_skip.cstar  loop_pointer_condition.cstar  loop_range_break_continue.cstar  loop_range_statement.cstar  multi_level_dereference_assignment.cstar  multidim_array_assignment.cstar  multidim_array_param_read.cstar  multidim_array_param_write.cstar  pointer_from_pointer_initializer.cstar  pointer_variable_initializer.cstar  (+21 more)
examples/smoke/arrays/: array_copy_argument.cstar  array_dynamic_negative_index_read.cstar  array_element_assignment.cstar  array_element_logical_compare.cstar  array_element_read.cstar  array_negative_index_assignment.cstar  array_negative_index_read.cstar  array_param_write.cstar  array_scalar_fill.cstar  global_single_element_array_initializer.cstar  multidim_array_dynamic_index.cstar  multidim_array_dynamic_negative_index_read.cstar  multidim_array_negative_index_read.cstar  multidim_array_read.cstar  multidim_array_shortcut_assignment.cstar  single_element_array_initializer.cstar  span_fixed_array_full.cstar  span_fixed_array_range.cstar  (+3 more)
examples/tests/: comment00.cstar  comment01.cstar  comment02.cstar  var00.cstar
examples/type_checker/: 000.cstar  001.cstar  002.cstar  003.cstar  004.cstar  005.cstar  006.cstar  007.cstar  008.cstar  011.cstar  012.cstar  013.cstar  015.cstar  016.cstar  017.cstar  020.cstar  021.cstar  022.cstar  023.cstar  024.cstar  025.cstar  026.cstar  027.cstar  029.cstar  030.cstar  033.cstar  035.cstar  037.cstar  041.cstar  044.cstar  046.cstar  048.cstar  052.cstar  053.cstar  055.cstar  057.cstar  058.cstar  059.cstar  061.cstar  062.cstar  (+7 more)
examples/user_playground/: u01.cstar
examples/variables/: 000.cstar
include/: base.hpp  cstar_config.hpp.in
include/ast/: assignment_ast.hpp  ast.hpp  attribute_ast.hpp  binary_op_ast.hpp  cast_op_ast.hpp  control_flow_ast.hpp  declarator_ast.hpp  enum_ast.hpp  fix_ast.hpp  func_ast.hpp  func_call_ast.hpp  if_stmt.hpp  loop_stmt.hpp  macro_ast.hpp  new_ast.hpp  option_stmt.hpp  param_ast.hpp  protocol_ast.hpp  ret_ast.hpp  scalar_ast.hpp  span_ast.hpp  struct_ast.hpp  symbol_ast.hpp  trait_ast.hpp  type_ast.hpp  unary_op_ast.hpp  var_ast.hpp
include/codegen/: codegen.hpp  native_link_resolver.hpp  native_runtime.hpp
include/diagnostics/: banner.hpp  console.hpp  diagnostic.hpp
include/driver/: driver.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: hint_qualifier.hpp  hint_specifier.hpp  op_prec.hpp  parser.hpp  type_qualifier.hpp  type_specifiers.hpp  types.hpp  visibility_specifiers.hpp
include/visitor/: symbols.hpp  visitor.hpp
runtime/: cstar_windows_opengl_loader.c
src/codegen/: codegen.cpp  native_link_resolver.cpp  native_runtime.cpp  pass0.cpp  pass1.cpp
src/diagnostics/: banner.cpp  diagnostic.cpp
src/driver/: driver.cpp
src/parser/: #parser.cpp#  .#parser.cpp  branch.cpp  expr.cpp  function.cpp  loop.cpp  parser.cpp  parser_private.hpp  variable.cpp
src/visitor/: previsit.cpp  visitor.cpp
std/: core.cstar  fs.cstar  math.cstar  network.cstar  print.cstar  time.cstar
tests/performance/: README_TR.md
tests/stress/: README_TR.md
tools/: perf_benchmark.py  run_examples.bat  run_examples.ps1  stress_fuzz.py
vscode-cstar-syntax/: CHANGELOG.md  README.md  cstar-syntax-0.1.0.vsix  extension.js  language-configuration.json  package.json
vscode-cstar-syntax/syntaxes/: cstar.tmLanguage.json
(+387 files in other folders)
